<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general_settings">
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_timelapse_24"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_route">
        <Preference
            app:icon="@drawable/ic_baseline_view_list_24"
            app:key="appTrafficRulesScreen"
            app:summary="@string/app_traffic_rules_summary"
            app:title="@string/app_traffic_rules" />
        <EditTextPreference
            app:defaultValue="2080"
            app:icon="@drawable/ic_navigation_apps"
            app:key="mixedPort"
            app:title="@string/mixed_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="1080"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="byeDpiPort"
            app:title="@string/byedpi_port"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_dns">
        <EditTextPreference
            app:defaultValue="https://dns.google/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_remote"
            app:title="@string/domain_strategy_for_remote"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="https://223.5.5.5/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
