<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUserId"
            app:title="@string/username"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_push_pin_24"
            app:key="serverPinnedCertChainSha256"
            app:title="@string/pinned_certchain_sha256"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverAllowInsecure"
            app:title="@string/allow_insecure" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="serverTrustTunnelQuic"
            app:title="@string/trusttunnel_quic" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="bbr"
            app:entries="@array/tuic_congestion_controller_value"
            app:entryValues="@array/tuic_congestion_controller_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverTrustTunnelQuicCongestion"
            app:title="@string/trusttunnel_congestion_control"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_security_24"
            app:key="serverTrustTunnelHealthCheck"
            app:title="@string/trusttunnel_health_check" />
    </PreferenceCategory>

</PreferenceScreen>